src/main/java/uk/modl/parser/antlr/MODLParser.java
// Generated from /Users/tonywalmsley/work/num/grammar/antlr4/MODLParser.g4 by ANTLR 4.7.2
package uk.modl.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MODLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, NULL=2, TRUE=3, FALSE=4, COLON=5, EQUALS=6, STRUCT_SEP=7, ARR_SEP=8, 
		LBRAC=9, RBRAC=10, LSBRAC=11, RSBRAC=12, NUMBER=13, COMMENT=14, STRING=15, 
		HASH_PREFIX=16, QUOTED=17, GRAVED=18, LCBRAC=19, CWS=20, QMARK=21, FSLASH=22, 
		GTHAN=23, LTHAN=24, ASTERISK=25, AMP=26, PIPE=27, EXCLAM=28, CCOMMENT=29, 
		RCBRAC=30;
	public static final int
		RULE_modl = 0, RULE_modl_structure = 1, RULE_modl_map = 2, RULE_modl_array = 3, 
		RULE_modl_nb_array = 4, RULE_modl_pair = 5, RULE_modl_value_item = 6, 
		RULE_modl_top_level_conditional = 7, RULE_modl_top_level_conditional_return = 8, 
		RULE_modl_map_conditional = 9, RULE_modl_map_conditional_return = 10, 
		RULE_modl_map_item = 11, RULE_modl_array_conditional = 12, RULE_modl_array_conditional_return = 13, 
		RULE_modl_array_item = 14, RULE_modl_value_conditional = 15, RULE_modl_value_conditional_return = 16, 
		RULE_modl_condition_test = 17, RULE_modl_operator = 18, RULE_modl_condition = 19, 
		RULE_modl_condition_group = 20, RULE_modl_value = 21, RULE_modl_array_value_item = 22, 
		RULE_modl_primitive = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"modl", "modl_structure", "modl_map", "modl_array", "modl_nb_array", 
			"modl_pair", "modl_value_item", "modl_top_level_conditional", "modl_top_level_conditional_return", 
			"modl_map_conditional", "modl_map_conditional_return", "modl_map_item", 
			"modl_array_conditional", "modl_array_conditional_return", "modl_array_item", 
			"modl_value_conditional", "modl_value_conditional_return", "modl_condition_test", 
			"modl_operator", "modl_condition", "modl_condition_group", "modl_value", 
			"modl_array_value_item", "modl_primitive"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "','", null, null, null, 
			null, null, null, null, null, null, null, "'{'", null, "'?'", "'/'", 
			"'>'", "'<'", "'*'", "'&'", "'|'", "'!'", null, "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "NULL", "TRUE", "FALSE", "COLON", "EQUALS", "STRUCT_SEP", 
			"ARR_SEP", "LBRAC", "RBRAC", "LSBRAC", "RSBRAC", "NUMBER", "COMMENT", 
			"STRING", "HASH_PREFIX", "QUOTED", "GRAVED", "LCBRAC", "CWS", "QMARK", 
			"FSLASH", "GTHAN", "LTHAN", "ASTERISK", "AMP", "PIPE", "EXCLAM", "CCOMMENT", 
			"RCBRAC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MODLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MODLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MODLParser.EOF, 0); }
		public List<Modl_structureContext> modl_structure() {
			return getRuleContexts(Modl_structureContext.class);
		}
		public Modl_structureContext modl_structure(int i) {
			return getRuleContext(Modl_structureContext.class,i);
		}
		public List<TerminalNode> STRUCT_SEP() { return getTokens(MODLParser.STRUCT_SEP); }
		public TerminalNode STRUCT_SEP(int i) {
			return getToken(MODLParser.STRUCT_SEP, i);
		}
		public ModlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModlContext modl() throws RecognitionException {
		ModlContext _localctx = new ModlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_modl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				{
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << LBRAC) | (1L << LSBRAC) | (1L << NUMBER) | (1L << STRING) | (1L << QUOTED) | (1L << LCBRAC))) != 0)) {
					{
					setState(48);
					modl_structure();
					}
				}

				}
				}
				break;
			case 2:
				{
				{
				setState(51);
				modl_structure();
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(52);
						match(STRUCT_SEP);
						setState(53);
						modl_structure();
						}
						} 
					}
					setState(58);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==STRUCT_SEP) {
					{
					setState(59);
					match(STRUCT_SEP);
					}
				}

				}
				break;
			}
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Modl_structureContext extends ParserRuleContext {
		public Modl_mapContext modl_map() {
			return getRuleContext(Modl_mapContext.class,0);
		}
		public Modl_arrayContext modl_array() {
			return getRuleContext(Modl_arrayContext.class,0);
		}
		public Modl_top_level_conditionalContext modl_top_level_conditional() {
			return getRuleContext(Modl_top_level_conditionalContext.class,0);
		}
		public Modl_pairContext modl_pair() {
			return getRuleContext(Modl_pairContext.class,0);
		}
		public Modl_structureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl_structure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl_structure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl_structure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Modl_structureContext modl_structure() throws RecognitionException {
		Modl_structureContext _localctx = new Modl_structureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_modl_structure);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRAC:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				modl_map();
				}
				break;
			case LSBRAC:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				modl_array();
				}
				break;
			case LCBRAC:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				modl_top_level_conditional();
				}
				break;
			case NULL:
			case TRUE:
			case FALSE:
			case NUMBER:
			case STRING:
			case QUOTED:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				modl_pair();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Modl_mapContext extends ParserRuleContext {
		public TerminalNode LBRAC() { return getToken(MODLParser.LBRAC, 0); }
		public TerminalNode RBRAC() { return getToken(MODLParser.RBRAC, 0); }
		public List<Modl_map_itemContext> modl_map_item() {
			return getRuleContexts(Modl_map_itemContext.class);
		}
		public Modl_map_itemContext modl_map_item(int i) {
			return getRuleContext(Modl_map_itemContext.class,i);
		}
		public List<TerminalNode> STRUCT_SEP() { return getTokens(MODLParser.STRUCT_SEP); }
		public TerminalNode STRUCT_SEP(int i) {
			return getToken(MODLParser.STRUCT_SEP, i);
		}
		public Modl_mapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl_map(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl_map(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl_map(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Modl_mapContext modl_map() throws RecognitionException {
		Modl_mapContext _localctx = new Modl_mapContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_modl_map);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(LBRAC);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << NUMBER) | (1L << STRING) | (1L << QUOTED) | (1L << LCBRAC))) != 0)) {
				{
				setState(73);
				modl_map_item();
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==STRUCT_SEP) {
					{
					{
					setState(74);
					match(STRUCT_SEP);
					setState(75);
					modl_map_item();
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(83);
			match(RBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Modl_arrayContext extends ParserRuleContext {
		public TerminalNode LSBRAC() { return getToken(MODLParser.LSBRAC, 0); }
		public TerminalNode RSBRAC() { return getToken(MODLParser.RSBRAC, 0); }
		public List<Modl_array_itemContext> modl_array_item() {
			return getRuleContexts(Modl_array_itemContext.class);
		}
		public Modl_array_itemContext modl_array_item(int i) {
			return getRuleContext(Modl_array_itemContext.class,i);
		}
		public List<Modl_nb_arrayContext> modl_nb_array() {
			return getRuleContexts(Modl_nb_arrayContext.class);
		}
		public Modl_nb_arrayContext modl_nb_array(int i) {
			return getRuleContext(Modl_nb_arrayContext.class,i);
		}
		public List<TerminalNode> STRUCT_SEP() { return getTokens(MODLParser.STRUCT_SEP); }
		public TerminalNode STRUCT_SEP(int i) {
			return getToken(MODLParser.STRUCT_SEP, i);
		}
		public Modl_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl_array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Modl_arrayContext modl_array() throws RecognitionException {
		Modl_arrayContext _localctx = new Modl_arrayContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_modl_array);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(LSBRAC);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << LBRAC) | (1L << LSBRAC) | (1L << NUMBER) | (1L << STRING) | (1L << QUOTED) | (1L << LCBRAC))) != 0)) {
				{
				setState(88);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(86);
					modl_array_item();
					}
					break;
				case 2:
					{
					setState(87);
					modl_nb_array();
					}
					break;
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==STRUCT_SEP) {
					{
					{
					setState(91); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(90);
						match(STRUCT_SEP);
						}
						}
						setState(93); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==STRUCT_SEP );
					setState(97);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(95);
						modl_array_item();
						}
						break;
					case 2:
						{
						setState(96);
						modl_nb_array();
						}
						break;
					}
					setState(102);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(99);
							match(STRUCT_SEP);
							}
							} 
						}
						setState(104);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
					}
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(112);
			match(RSBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Modl_nb_arrayContext extends ParserRuleContext {
		public List<Modl_array_itemContext> modl_array_item() {
			return getRuleContexts(Modl_array_itemContext.class);
		}
		public Modl_array_itemContext modl_array_item(int i) {
			return getRuleContext(Modl_array_itemContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(MODLParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(MODLParser.COLON, i);
		}
		public Modl_nb_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl_nb_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl_nb_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl_nb_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl_nb_array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Modl_nb_arrayContext modl_nb_array() throws RecognitionException {
		Modl_nb_arrayContext _localctx = new Modl_nb_arrayContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modl_nb_array);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(114);
					modl_array_item();
					setState(116); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(115);
							match(COLON);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(118); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(122); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(124);
					modl_array_item();
					}
					} 
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(130);
				match(COLON);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Modl_pairContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(MODLParser.EQUALS, 0); }
		public Modl_value_itemContext modl_value_item() {
			return getRuleContext(Modl_value_itemContext.class,0);
		}
		public TerminalNode STRING() { return getToken(MODLParser.STRING, 0); }
		public TerminalNode QUOTED() { return getToken(MODLParser.QUOTED, 0); }
		public TerminalNode NUMBER() { return getToken(MODLParser.NUMBER, 0); }
		public TerminalNode NULL() { return getToken(MODLParser.NULL, 0); }
		public TerminalNode TRUE() { return getToken(MODLParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(MODLParser.FALSE, 0); }
		public Modl_mapContext modl_map() {
			return getRuleContext(Modl_mapContext.class,0);
		}
		public Modl_arrayContext modl_array() {
			return getRuleContext(Modl_arrayContext.class,0);
		}
		public Modl_pairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl_pair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl_pair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl_pair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Modl_pairContext modl_pair() throws RecognitionException {
		Modl_pairContext _localctx = new Modl_pairContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_modl_pair);
		int _la;
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << NUMBER) | (1L << STRING) | (1L << QUOTED))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(134);
				match(EQUALS);
				setState(135);
				modl_value_item();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(STRING);
				setState(137);
				modl_map();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				match(STRING);
				setState(139);
				modl_array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Modl_value_itemContext extends ParserRuleContext {
		public Modl_valueContext modl_value() {
			return getRuleContext(Modl_valueContext.class,0);
		}
		public Modl_value_conditionalContext modl_value_conditional() {
			return getRuleContext(Modl_value_conditionalContext.class,0);
		}
		public Modl_value_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl_value_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl_value_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl_value_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl_value_item(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Modl_value_itemContext modl_value_item() throws RecognitionException {
		Modl_value_itemContext _localctx = new Modl_value_itemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_modl_value_item);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(142);
				modl_value();
				}
				break;
			case 2:
				{
				setState(143);
				modl_value_conditional();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Modl_top_level_conditionalContext extends ParserRuleContext {
		public TerminalNode LCBRAC() { return getToken(MODLParser.LCBRAC, 0); }
		public List<Modl_condition_testContext> modl_condition_test() {
			return getRuleContexts(Modl_condition_testContext.class);
		}
		public Modl_condition_testContext modl_condition_test(int i) {
			return getRuleContext(Modl_condition_testContext.class,i);
		}
		public List<TerminalNode> QMARK() { return getTokens(MODLParser.QMARK); }
		public TerminalNode QMARK(int i) {
			return getToken(MODLParser.QMARK, i);
		}
		public List<Modl_top_level_conditional_returnContext> modl_top_level_conditional_return() {
			return getRuleContexts(Modl_top_level_conditional_returnContext.class);
		}
		public Modl_top_level_conditional_returnContext modl_top_level_conditional_return(int i) {
			return getRuleContext(Modl_top_level_conditional_returnContext.class,i);
		}
		public TerminalNode RCBRAC() { return getToken(MODLParser.RCBRAC, 0); }
		public List<TerminalNode> FSLASH() { return getTokens(MODLParser.FSLASH); }
		public TerminalNode FSLASH(int i) {
			return getToken(MODLParser.FSLASH, i);
		}
		public Modl_top_level_conditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl_top_level_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl_top_level_conditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl_top_level_conditional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl_top_level_conditional(this);
			else return visitor.visitChildren(this);
		}
	}
